Added new sprites(Fire ITEMS)

--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "name": "Vanilla++",
-  "author": "tehrelt, theshoket",
+  "author": "tehrelt, theshoket, d1ede",
   "targetAPIVersion": "0.0.8",
   "dependencies": []
 }
